[gd_scene load_steps=7 format=2]

[ext_resource path="res://script/AudioSettings.gd" type="Script" id=1]
[ext_resource path="res://Imagens/ajustesTitulo.png" type="Texture" id=3]
[ext_resource path="res://Imagens/Tela de ajustes.png" type="Texture" id=4]
[ext_resource path="res://Imagens/botaoSFX (1).png" type="Texture" id=5]
[ext_resource path="res://Imagens/botaoMusica (1).png" type="Texture" id=6]
[ext_resource path="res://Imagens/botaoMaster (3).png" type="Texture" id=9]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 234, 370 )
scale = Vector2( 0.756, 0.65 )
texture = ExtResource( 4 )

[node name="AjustesTitulo" type="Sprite" parent="."]
position = Vector2( 233, 120 )
scale = Vector2( 0.47191, 0.47191 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 60.0
margin_top = 184.0
margin_right = 179.0
margin_bottom = 330.0
rect_scale = Vector2( 3, 3 )
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 119.0
margin_bottom = 14.0
text = " Volume principal"

[node name="volumeMestre" type="HSlider" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 119.0
margin_bottom = 34.0
custom_icons/grabber_disabled = ExtResource( 9 )
custom_icons/grabber_highlight = ExtResource( 9 )
custom_icons/grabber = ExtResource( 9 )
min_value = -30.0
max_value = 0.0

[node name="Vazio1" type="Label" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 119.0
margin_bottom = 52.0

[node name="Label2" type="Label" parent="VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 56.0
margin_right = 119.0
margin_bottom = 70.0
text = "MÃºsica"
align = 1

[node name="volumeMusica" type="HSlider" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 119.0
margin_bottom = 90.0
custom_icons/grabber_disabled = ExtResource( 6 )
custom_icons/grabber_highlight = ExtResource( 6 )
custom_icons/grabber = ExtResource( 6 )
min_value = -30.0
max_value = 0.0

[node name="Vazio2" type="Label" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 119.0
margin_bottom = 108.0

[node name="Label3" type="Label" parent="VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 112.0
margin_right = 119.0
margin_bottom = 126.0
text = "Efeitos"
align = 1

[node name="volumeSFX" type="HSlider" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 119.0
margin_bottom = 146.0
custom_icons/grabber_disabled = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
min_value = -30.0
max_value = 0.0

[connection signal="value_changed" from="VBoxContainer/volumeMestre" to="." method="_on_volumeMestre_value_changed"]
[connection signal="value_changed" from="VBoxContainer/volumeMusica" to="." method="_on_volumeMusica_value_changed"]
[connection signal="value_changed" from="VBoxContainer/volumeSFX" to="." method="_on_volumeSFX_value_changed"]
